--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.0",
     "@types/node": "18.11.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.2.1",
+    "ts-jest": "^29.0.3",
     "typescript": "4.8.4"
   }
 }
