--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --no-cache"
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
+    "jest-css-modules": "^2.1.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -26,7 +28,14 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sss|styl)$": "<rootDir>/node_modules/jest-css-modules"
+    },
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
