--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@testing-library/react-hooks": "^8.0.1",
+    "eslint-plugin-jest": "^27.1.7",
     "jest-css-modules": "^2.1.0",
     "next": "12.3.1",
     "react": "18.2.0",
